--- a/index.html
+++ b/index.html
@@ -2,23 +2,49 @@
 <html lang="en">
 	<head>
     	<meta charset="utf-8">
-    	<meta name="description" content="Your description goes here">
-    	<meta name="keywords" content="one,two,three">
+    	<meta name="Relaxr blog" content="Personal assistant company blog">
+    	<meta name="Relaxr" content="ompany, personal assistant, automation">
+   
 
-		<title>Blank Template</title>
+		<title>Relaxr</title>
 
 		<!-- CSS links -->
+		<link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link href='https://www.google.com/fonts#UsePlace:use/Collection:Open+Sans' rel='stylesheet' type='text/css'>
 
 	</head>
+
 	<body>
+		<header>
+			<h2 class="companyName" align="left">Relaxr</h2>
+			<p id="slogan">Get piece of mind with a single tap</p>
+			<button id="getItNow" type="button">Get it Now</button>
+		</header>
+		<main>
+			<span id="benefits">Benefits</span>
+			<p>The perfect personal assistant. Relaxr does your job for your so you can enjoy life as it is meant to be.</p>
+			<ul>
+				<li>Schedule meetings for you</li>
+				<li>Excel automation to complete your work for you</li>
+				<li>Responds to emails on your behalf</li>
+				<li>Does all your work for you with our revolutionary AI technology</li>
+			</ul>
+		</main>
+		<section id="testimonial">
+			<p>"Relaxr changed my life. I've been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work."<span id="name"></br>&#8212;Amanda, Intuit</span></p>
+		</section>
 		<div>
-			<header>
-				<h1>Blank Template</h1>
-				<h2>Just another blank template</h2>
-			</header>
-			<footer>
-				&copy; Footer Goes Here
-			</footer>
+			<button id="signUpNow" type="button">Sign Up Now!</button>
 		</div>
+		<footer>
+			<h2 id="footerName">Relaxr</h2>
+			</br>
+			<img id="twitter" src="images/twitter.png" alt="twitter link"/>
+			<img id="facebook" src="images/facebook.png" alt="facebook link"/>
+		</footer>
+		<small>
+		<p>&copy; Copyright 2016. Relaxr.</p>
+		</small>
 	</body>
 </html>
